--- a/face_detection.ipynb
+++ b/face_detection.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import cv2\n",
     "\n",
+    "#gui for extracting image path"
     "import  tkinter as tk\n",
     "from tkinter import filedialog\n",
     "\n",
